# Real-Time-Fraud-Revenue-Intelligence-Lakehouse

./: .env.example  .gitignore  DEPLOYMENT.md  FINAL_VALIDATION_REPORT.md  Makefile  README.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
airflow/: Dockerfile  requirements.txt
airflow/dags/: bronze_ingestion_dag.py  data_quality_dag.py  dbt_transformation_dag.py  gold_aggregation_dag.py  ml_training_dag.py  silver_transformation_dag.py
config/: platform.yml
data_generator/: Dockerfile  kafka_producer.py  main.py  requirements.txt
data_generator/generators/: __init__.py  base.py  devices.py  geo.py  orders.py  payments.py  refunds.py  schemas.py  users.py
data_quality/: great_expectations.yml  validate.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_surrogate_key.sql
dbt/tests/: assert_fraud_rate_bounds.sql  assert_positive_amounts.sql
ml/: Dockerfile  requirements.txt
ml/models/: fraud_detector.py  train.py
ml/serving/: api.py
monitoring/prometheus/: prometheus.yml
scripts/: create_kafka_topics.sh  create_multiple_dbs.sh  init_minio_buckets.sh  run_smoke_test.sh  setup.sh
spark_jobs/: Dockerfile  requirements.txt
spark_jobs/bronze/: ingest_stream.py
spark_jobs/gold/: fraud_summary.py  revenue_aggregations.py
spark_jobs/silver/: build_fraud_features.py  transform_transactions.py
spark_jobs/utils/: delta_utils.py  schemas.py  spark_session.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_data_quality.py  test_fraud_model.py  (+1 more)
warehouse/: init.sql
(+13 files in other folders)
