[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fraud-intelligence-platform"
version = "1.0.0"
description = "FAANG-grade Real-Time Fraud & Revenue Intelligence Data Platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: requires running Docker platform",
    "unit: pure unit tests, no external dependencies",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | dbt/target
  | dbt/dbt_packages
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["dbt/**", ".venv/**"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
